--- a/app/SmartCoasterWithFriends/page.module.css
+++ b/app/SmartCoasterWithFriends/page.module.css
@@ -75,9 +75,6 @@
 
 @media (max-width: 425px) {
   .container {
-    margin: 0;
-  }
-  .article {
-    margin: 0 20px;
+    margin: 0 16px;
   }
 }
