--- a/app/page.module.css
+++ b/app/page.module.css
@@ -42,6 +42,6 @@
   }
 
   .projectContainer {
-    margin: 0;
+    margin: 0 16px;
   }
 }
